1. 终端组件改造